--- a/!Basics_101.ipynb
+++ b/!Basics_101.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOE6tilbTB4JQGs/gOpbYHH",
+      "authorship_tag": "ABX9TyOecmQeIE++ITVFXfBvc7Z1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,6 +125,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "ToK6QHWOu7de"
+      },
+      "source": [
+        "import sklearn.datasets \r\n",
+        "import numpy as np"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XBA4rS3s8leW"
       },
       "source": [
         ""
