--- a/Simple_Linux_Commands.ipynb
+++ b/Simple_Linux_Commands.ipynb
@@ -93,24 +93,147 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HEW_Femhkt09"
+        "id": "HEW_Femhkt09",
+        "outputId": "c3be573e-619b-4020-ce2b-bad67df4b37e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!cat /proc/cpuinfo # cpu information "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "processor\t: 0\n",
+            "vendor_id\t: GenuineIntel\n",
+            "cpu family\t: 6\n",
+            "model\t\t: 79\n",
+            "model name\t: Intel(R) Xeon(R) CPU @ 2.20GHz\n",
+            "stepping\t: 0\n",
+            "microcode\t: 0x1\n",
+            "cpu MHz\t\t: 2199.998\n",
+            "cache size\t: 56320 KB\n",
+            "physical id\t: 0\n",
+            "siblings\t: 2\n",
+            "core id\t\t: 0\n",
+            "cpu cores\t: 1\n",
+            "apicid\t\t: 0\n",
+            "initial apicid\t: 0\n",
+            "fpu\t\t: yes\n",
+            "fpu_exception\t: yes\n",
+            "cpuid level\t: 13\n",
+            "wp\t\t: yes\n",
+            "flags\t\t: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ss ht syscall nx pdpe1gb rdtscp lm constant_tsc rep_good nopl xtopology nonstop_tsc cpuid tsc_known_freq pni pclmulqdq ssse3 fma cx16 pcid sse4_1 sse4_2 x2apic movbe popcnt aes xsave avx f16c rdrand hypervisor lahf_lm abm 3dnowprefetch invpcid_single ssbd ibrs ibpb stibp fsgsbase tsc_adjust bmi1 hle avx2 smep bmi2 erms invpcid rtm rdseed adx smap xsaveopt arat md_clear arch_capabilities\n",
+            "bugs\t\t: cpu_meltdown spectre_v1 spectre_v2 spec_store_bypass l1tf mds swapgs taa\n",
+            "bogomips\t: 4399.99\n",
+            "clflush size\t: 64\n",
+            "cache_alignment\t: 64\n",
+            "address sizes\t: 46 bits physical, 48 bits virtual\n",
+            "power management:\n",
+            "\n",
+            "processor\t: 1\n",
+            "vendor_id\t: GenuineIntel\n",
+            "cpu family\t: 6\n",
+            "model\t\t: 79\n",
+            "model name\t: Intel(R) Xeon(R) CPU @ 2.20GHz\n",
+            "stepping\t: 0\n",
+            "microcode\t: 0x1\n",
+            "cpu MHz\t\t: 2199.998\n",
+            "cache size\t: 56320 KB\n",
+            "physical id\t: 0\n",
+            "siblings\t: 2\n",
+            "core id\t\t: 0\n",
+            "cpu cores\t: 1\n",
+            "apicid\t\t: 1\n",
+            "initial apicid\t: 1\n",
+            "fpu\t\t: yes\n",
+            "fpu_exception\t: yes\n",
+            "cpuid level\t: 13\n",
+            "wp\t\t: yes\n",
+            "flags\t\t: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ss ht syscall nx pdpe1gb rdtscp lm constant_tsc rep_good nopl xtopology nonstop_tsc cpuid tsc_known_freq pni pclmulqdq ssse3 fma cx16 pcid sse4_1 sse4_2 x2apic movbe popcnt aes xsave avx f16c rdrand hypervisor lahf_lm abm 3dnowprefetch invpcid_single ssbd ibrs ibpb stibp fsgsbase tsc_adjust bmi1 hle avx2 smep bmi2 erms invpcid rtm rdseed adx smap xsaveopt arat md_clear arch_capabilities\n",
+            "bugs\t\t: cpu_meltdown spectre_v1 spectre_v2 spec_store_bypass l1tf mds swapgs taa\n",
+            "bogomips\t: 4399.99\n",
+            "clflush size\t: 64\n",
+            "cache_alignment\t: 64\n",
+            "address sizes\t: 46 bits physical, 48 bits virtual\n",
+            "power management:\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PtcSdEpBuO2m"
+        "id": "PtcSdEpBuO2m",
+        "outputId": "866bdf9c-9199-4e3b-9acd-f83d342cf454",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!cat /proc/meminfo # memory information "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "MemTotal:       13333596 kB\n",
+            "MemFree:        10937976 kB\n",
+            "MemAvailable:   12554236 kB\n",
+            "Buffers:           73296 kB\n",
+            "Cached:          1695004 kB\n",
+            "SwapCached:            0 kB\n",
+            "Active:           585940 kB\n",
+            "Inactive:        1564096 kB\n",
+            "Active(anon):     351412 kB\n",
+            "Inactive(anon):      328 kB\n",
+            "Active(file):     234528 kB\n",
+            "Inactive(file):  1563768 kB\n",
+            "Unevictable:           0 kB\n",
+            "Mlocked:               0 kB\n",
+            "SwapTotal:             0 kB\n",
+            "SwapFree:              0 kB\n",
+            "Dirty:               676 kB\n",
+            "Writeback:             0 kB\n",
+            "AnonPages:        381748 kB\n",
+            "Mapped:           205516 kB\n",
+            "Shmem:               932 kB\n",
+            "Slab:             155468 kB\n",
+            "SReclaimable:     117600 kB\n",
+            "SUnreclaim:        37868 kB\n",
+            "KernelStack:        3632 kB\n",
+            "PageTables:         5080 kB\n",
+            "NFS_Unstable:          0 kB\n",
+            "Bounce:                0 kB\n",
+            "WritebackTmp:          0 kB\n",
+            "CommitLimit:     6666796 kB\n",
+            "Committed_AS:    2603016 kB\n",
+            "VmallocTotal:   34359738367 kB\n",
+            "VmallocUsed:           0 kB\n",
+            "VmallocChunk:          0 kB\n",
+            "Percpu:              952 kB\n",
+            "AnonHugePages:         0 kB\n",
+            "ShmemHugePages:        0 kB\n",
+            "ShmemPmdMapped:        0 kB\n",
+            "HugePages_Total:       0\n",
+            "HugePages_Free:        0\n",
+            "HugePages_Rsvd:        0\n",
+            "HugePages_Surp:        0\n",
+            "Hugepagesize:       2048 kB\n",
+            "Hugetlb:               0 kB\n",
+            "DirectMap4k:       74984 kB\n",
+            "DirectMap2M:     4118528 kB\n",
+            "DirectMap1G:    11534336 kB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
