--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -6,7 +6,7 @@
       "name": "Data Preprocessing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMRBuIvrqWnbA8ZlzOE1ggt",
+      "authorship_tag": "ABX9TyNZ/uDJ4PSGGbcagznfKFsE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "import numpy as np \r\n",
         "import pandas as pd "
       ],
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -64,21 +64,10 @@
         "id": "0D7s-mnc-DPJ"
       },
       "source": [
-        "data, target = sklearn.datasets.load_breast_cancer(return_X_y = True) "
+        "data, target = sklearn.datasets.load_breast_cancer(return_X_y = True) \r\n",
+        "# these are returned as numpy arrays "
       ],
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "19AAau3UESng"
-      },
-      "source": [
-        "print(data)\r\n",
-        "print(target)"
-      ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -88,17 +77,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JS8HnYpTEYxi",
-        "outputId": "9a01074a-bce3-4cba-dab2-fb380fce0457"
+        "outputId": "3001107f-3c2b-4b0d-f37b-def0c8dcb819"
       },
       "source": [
-        "print(data.shape[0], data.shape[1])"
+        "print(data.shape[0], data.shape[1])\r\n",
+        "print(target.shape[0])"
       ],
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "569 30\n"
+            "569 30\n",
+            "569\n"
           ],
           "name": "stdout"
         }
@@ -110,18 +101,62 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "BYSZJd8xE7tM",
-        "outputId": "7d353927-ce3d-48db-97eb-db7d7e6bc7db"
+        "id": "OLmBBuZgLDtH",
+        "outputId": "05eb002a-af8b-48b2-a848-a68713e1600d"
       },
       "source": [
-        "print(target.shape)"
+        "print(data)"
       ],
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(569,)\n"
+            "[[1.799e+01 1.038e+01 1.228e+02 ... 2.654e-01 4.601e-01 1.189e-01]\n",
+            " [2.057e+01 1.777e+01 1.329e+02 ... 1.860e-01 2.750e-01 8.902e-02]\n",
+            " [1.969e+01 2.125e+01 1.300e+02 ... 2.430e-01 3.613e-01 8.758e-02]\n",
+            " ...\n",
+            " [1.660e+01 2.808e+01 1.083e+02 ... 1.418e-01 2.218e-01 7.820e-02]\n",
+            " [2.060e+01 2.933e+01 1.401e+02 ... 2.650e-01 4.087e-01 1.240e-01]\n",
+            " [7.760e+00 2.454e+01 4.792e+01 ... 0.000e+00 2.871e-01 7.039e-02]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KhrtziYbLE-Q",
+        "outputId": "3bd788cf-ce2a-4779-9d49-f7ff249c73f7"
+      },
+      "source": [
+        "print(target)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            " 1 0 0 0 0 0 0 0 0 1 0 1 1 1 1 1 0 0 1 0 0 1 1 1 1 0 1 0 0 1 1 1 1 0 1 0 0\n",
+            " 1 0 1 0 0 1 1 1 0 0 1 0 0 0 1 1 1 0 1 1 0 0 1 1 1 0 0 1 1 1 1 0 1 1 0 1 1\n",
+            " 1 1 1 1 1 1 0 0 0 1 0 0 1 1 1 0 0 1 0 1 0 0 1 0 0 1 1 0 1 1 0 1 1 1 1 0 1\n",
+            " 1 1 1 1 1 1 1 1 0 1 1 1 1 0 0 1 0 1 1 0 0 1 1 0 0 1 1 1 1 0 1 1 0 0 0 1 0\n",
+            " 1 0 1 1 1 0 1 1 0 0 1 0 0 0 0 1 0 0 0 1 0 1 0 1 1 0 1 0 0 0 0 1 1 0 0 1 1\n",
+            " 1 0 1 1 1 1 1 0 0 1 1 0 1 1 0 0 1 0 1 1 1 1 0 1 1 1 1 1 0 1 0 0 0 0 0 0 0\n",
+            " 0 0 0 0 0 0 0 1 1 1 1 1 1 0 1 0 1 1 0 1 1 0 1 0 0 1 1 1 1 1 1 1 1 1 1 1 1\n",
+            " 1 0 1 1 0 1 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 1 1 1 0 1 0 1 1 1 1 0 0 0 1 1\n",
+            " 1 1 0 1 0 1 0 1 1 1 0 1 1 1 1 1 1 1 0 0 0 1 1 1 1 1 1 1 1 1 1 1 0 0 1 0 0\n",
+            " 0 1 0 0 1 1 1 1 1 0 1 1 1 1 1 0 1 1 1 0 1 1 0 0 1 1 1 1 1 1 0 1 1 1 1 1 1\n",
+            " 1 0 1 1 1 1 1 0 1 1 0 1 1 1 1 1 1 1 1 1 1 1 1 0 1 0 0 1 0 1 1 1 1 1 0 1 1\n",
+            " 0 1 0 1 1 0 1 0 1 1 1 1 1 1 1 1 0 0 1 1 1 1 1 1 0 1 1 1 1 1 1 1 1 1 1 0 1\n",
+            " 1 1 1 1 1 1 0 1 0 1 1 0 1 1 1 1 1 0 0 1 0 1 0 1 1 1 1 1 0 1 1 0 1 0 1 0 0\n",
+            " 1 1 1 0 1 1 1 1 1 1 1 1 1 1 1 0 1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+            " 1 1 1 1 1 1 1 0 0 0 0 0 0 1]\n"
           ],
           "name": "stdout"
         }
