--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -5,13 +5,9 @@
     "colab": {
       "name": "Data Preprocessing.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "k1foIw_H99PR",
-        "TAyQ0xoHWlj6",
-        "iRRxQhBdZV9S"
-      ],
+      "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNiXtF0iQpfiR8ahaBwmb08",
+      "authorship_tag": "ABX9TyMvvOKedM5v//nar/8AibUU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +44,7 @@
         "import sklearn.datasets \r\n",
         "import numpy as np "
       ],
-      "execution_count": 2,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -71,7 +67,7 @@
         "X,Y = sklearn.datasets.load_breast_cancer(return_X_y = True) \r\n",
         "# these are returned as numpy arrays "
       ],
-      "execution_count": 3,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -81,13 +77,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JS8HnYpTEYxi",
-        "outputId": "952d26ac-d727-4398-9df4-eef5cae244ae"
+        "outputId": "52bd4951-338d-45e5-e683-ce024d325d81"
       },
       "source": [
         "print(X.shape[0], X.shape[1])\r\n",
         "print(Y.shape[0])"
       ],
-      "execution_count": 4,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,12 +102,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OLmBBuZgLDtH",
-        "outputId": "82516196-97eb-4848-b101-874ee0967910"
+        "outputId": "4093fd51-18a0-4f04-b056-9aa0fd1c62f7"
       },
       "source": [
         "print(X)"
       ],
-      "execution_count": 5,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,12 +131,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KhrtziYbLE-Q",
-        "outputId": "9794acde-d328-407c-a478-b9fbc7dad8be"
+        "outputId": "1a8b77ef-0619-46b1-936d-b18beb4424e8"
       },
       "source": [
         "print(Y)"
       ],
-      "execution_count": 6,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +170,7 @@
       "source": [
         "import pandas as pd "
       ],
-      "execution_count": 7,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -186,7 +182,7 @@
         "# converting the numpy array into a data frame to visualize the data better \r\n",
         "X = pd.DataFrame(X,columns=sklearn.datasets.load_breast_cancer().feature_names) # just adding the column names to understand the data better "
       ],
-      "execution_count": 8,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -197,12 +193,12 @@
           "height": 249
         },
         "id": "HziPNajcYIvX",
-        "outputId": "30f4f0c9-a4e7-4c3d-a574-e8424e0730b2"
+        "outputId": "a509d3a2-83c7-4829-8eec-c0b1ca1ec9ea"
       },
       "source": [
         "X.head() "
       ],
-      "execution_count": 9,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +438,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 48
         }
       ]
     },
@@ -454,7 +450,7 @@
       "source": [
         "X_Y = X.assign(Y = Y) # creating a new data frame to be able to visulaize the values with the outputs "
       ],
-      "execution_count": 10,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -465,12 +461,12 @@
           "height": 455
         },
         "id": "rA69N5v_cvF5",
-        "outputId": "962904b0-851d-4362-c992-75f306d71bc1"
+        "outputId": "d5973d0a-7ebf-429e-92bf-97a81bb59d27"
       },
       "source": [
         "X_Y"
       ],
-      "execution_count": 11,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -927,7 +923,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 50
         }
       ]
     },
@@ -939,12 +935,12 @@
           "height": 338
         },
         "id": "feiY4Twic5eM",
-        "outputId": "8f738772-da06-4f07-c0bd-542f9d20faec"
+        "outputId": "61c60792-352e-42aa-8509-6856a8835820"
       },
       "source": [
         "X_Y.describe() # describing the data"
       ],
-      "execution_count": 12,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1295,7 +1291,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 51
         }
       ]
     },
@@ -1306,12 +1302,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e9c5f458-a3b8-4b89-a877-d6557f565ca1"
+        "outputId": "aa673f07-b255-4fdb-c877-bc9f3aa53937"
       },
       "source": [
         "print(X_Y[\"Y\"].value_counts())"
       ],
-      "execution_count": 13,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -1331,12 +1327,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xjKmBVEcVZw5",
-        "outputId": "627f8b87-eae9-448a-8fca-5657fbc184ef"
+        "outputId": "7835b7cb-0649-4c2a-f05f-b8acaaac92cb"
       },
       "source": [
         "print(sklearn.datasets.load_breast_cancer().target_names)"
       ],
-      "execution_count": 14,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -1355,12 +1351,12 @@
           "height": 190
         },
         "id": "8rGqNlJhV4be",
-        "outputId": "5b905297-868f-4e16-e23e-a58ab825b73b"
+        "outputId": "63000f98-f903-4add-e967-f953b08a37c4"
       },
       "source": [
         "X_Y.groupby(\"Y\").mean() # shows the values of the features less for 1 than for 0 on average. "
       ],
-      "execution_count": 16,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1532,7 +1528,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 54
         }
       ]
     },
@@ -1553,7 +1549,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split "
       ],
-      "execution_count": 17,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -1564,7 +1560,7 @@
       "source": [
         "X_train,X_test,Y_train,Y_test = train_test_split(X,Y,test_size=0.1,stratify=Y,random_state=1) # random state is very important for ML problem. "
       ],
-      "execution_count": 22,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -1574,12 +1570,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u7GL1VlIYMAe",
-        "outputId": "727bc461-e9e1-4aa4-fee7-a701fe5d6dd2"
+        "outputId": "300ffb75-de8b-4686-9271-f2882c1ba8cb"
       },
       "source": [
         "print(X.shape,X_train.shape,X_test.shape)"
       ],
-      "execution_count": 23,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -1597,12 +1593,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gPo2rv_cYbx4",
-        "outputId": "aedb9d2b-02ad-4d93-c4e4-878326375789"
+        "outputId": "4a68a33f-bb73-4d75-ef59-70cb4c7377fb"
       },
       "source": [
         "print(Y.mean(),Y_train.mean(),Y_test.mean()) # stratify ensures that the means are near about equal"
       ],
-      "execution_count": 24,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -1630,12 +1626,12 @@
           "height": 455
         },
         "id": "ZfPw7qnnZYrQ",
-        "outputId": "57e125ce-ed0c-483b-caf4-2206eb8e3c9b"
+        "outputId": "6fffb28d-c737-4543-8fa6-54ad258380a8"
       },
       "source": [
         "X_Y"
       ],
-      "execution_count": 28,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2092,7 +2088,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 59
         }
       ]
     },
@@ -2103,14 +2099,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iTV3x1jmZl6R",
-        "outputId": "b8393962-42f3-46cc-f17d-7a931398495f"
+        "outputId": "5de94764-36d5-469c-d6ad-3589f5574e14"
       },
       "source": [
         "# manual binarisation \r\n",
-        "X_binarised_3_train = X_train[\"mean area\"].map(lambda x : 0 if x<100 else 1) \r\n",
+        "X_binarised_3_train = X_train[\"mean area\"].map(lambda x : 1 if x<1000 else 0) \r\n",
         "X_binarised_3_train.head()"
       ],
-      "execution_count": 30,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2127,7 +2123,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 64
         }
       ]
     },
@@ -2141,7 +2137,7 @@
         "X_binarised_train = X_train.apply(pd.cut,bins=2,labels=[1,0])\r\n",
         "X_binarised_test = X_test.apply(pd.cut,bins=2,labels=[1,0]) "
       ],
-      "execution_count": 32,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -2153,7 +2149,7 @@
         "X_binarised_train = X_binarised_train.values\r\n",
         "X_binarised_test = X_binarised_test.values"
       ],
-      "execution_count": 39,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -2163,12 +2159,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UxQkNaiXbIh_",
-        "outputId": "452f7cb3-68de-47dc-e112-13ea87a59049"
+        "outputId": "417177be-d5b7-4d8b-cd81-fadaec9fcf36"
       },
       "source": [
         "print(type(X_binarised_train),type(Y_train))"
       ],
-      "execution_count": 40,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
