--- a/MP_Neuron_Implementation.ipynb
+++ b/MP_Neuron_Implementation.ipynb
@@ -5,9 +5,11 @@
     "colab": {
       "name": "MP Neuron Implementation.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNIPvvP2rivc4W5RxLYylHa",
+      "collapsed_sections": [
+        "k1foIw_H99PR",
+        "TAyQ0xoHWlj6"
+      ],
+      "authorship_tag": "ABX9TyO1Vgl8iklJTMhxgmQPJcsC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +46,7 @@
         "import sklearn.datasets \r\n",
         "import numpy as np "
       ],
-      "execution_count": null,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -67,7 +69,7 @@
         "X,Y = sklearn.datasets.load_breast_cancer(return_X_y = True) \r\n",
         "# these are returned as numpy arrays "
       ],
-      "execution_count": null,
+      "execution_count": 166,
       "outputs": []
     },
     {
@@ -77,13 +79,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JS8HnYpTEYxi",
-        "outputId": "52bd4951-338d-45e5-e683-ce024d325d81"
+        "outputId": "17b72ff2-e931-4651-f296-9a67261800c7"
       },
       "source": [
         "print(X.shape[0], X.shape[1])\r\n",
         "print(Y.shape[0])"
       ],
-      "execution_count": null,
+      "execution_count": 167,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,12 +104,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OLmBBuZgLDtH",
-        "outputId": "4093fd51-18a0-4f04-b056-9aa0fd1c62f7"
+        "outputId": "5491da2c-d109-4b70-8fad-8da60e64cd81"
       },
       "source": [
         "print(X)"
       ],
-      "execution_count": null,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,12 +133,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KhrtziYbLE-Q",
-        "outputId": "1a8b77ef-0619-46b1-936d-b18beb4424e8"
+        "outputId": "5b9821ec-5af4-418b-d58e-fd074303cae1"
       },
       "source": [
         "print(Y)"
       ],
-      "execution_count": null,
+      "execution_count": 169,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +172,7 @@
       "source": [
         "import pandas as pd "
       ],
-      "execution_count": null,
+      "execution_count": 170,
       "outputs": []
     },
     {
@@ -182,7 +184,7 @@
         "# converting the numpy array into a data frame to visualize the data better \r\n",
         "X = pd.DataFrame(X,columns=sklearn.datasets.load_breast_cancer().feature_names) # just adding the column names to understand the data better "
       ],
-      "execution_count": null,
+      "execution_count": 171,
       "outputs": []
     },
     {
@@ -190,15 +192,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 249
+          "height": 0
         },
         "id": "HziPNajcYIvX",
-        "outputId": "a509d3a2-83c7-4829-8eec-c0b1ca1ec9ea"
+        "outputId": "7b9e60e8-811c-46fb-b546-871f370cfbce"
       },
       "source": [
         "X.head() "
       ],
-      "execution_count": null,
+      "execution_count": 172,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,7 +440,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 172
         }
       ]
     },
@@ -450,7 +452,7 @@
       "source": [
         "X_Y = X.assign(Y = Y) # creating a new data frame to be able to visulaize the values with the outputs "
       ],
-      "execution_count": null,
+      "execution_count": 173,
       "outputs": []
     },
     {
@@ -458,15 +460,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 455
+          "height": 0
         },
         "id": "rA69N5v_cvF5",
-        "outputId": "d5973d0a-7ebf-429e-92bf-97a81bb59d27"
+        "outputId": "8c6e2729-641a-4130-e6e1-e54569c9965b"
       },
       "source": [
         "X_Y"
       ],
-      "execution_count": null,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,7 +925,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 174
         }
       ]
     },
@@ -932,15 +934,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 338
+          "height": 0
         },
         "id": "feiY4Twic5eM",
-        "outputId": "61c60792-352e-42aa-8509-6856a8835820"
+        "outputId": "d180eab0-6b74-4e7b-d2d3-532efb3f67d9"
       },
       "source": [
         "X_Y.describe() # describing the data"
       ],
-      "execution_count": null,
+      "execution_count": 175,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1291,7 +1293,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 175
         }
       ]
     },
@@ -1302,12 +1304,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aa673f07-b255-4fdb-c877-bc9f3aa53937"
+        "outputId": "ce9d82c9-7a91-4b2b-b31b-5ba6582c05d7"
       },
       "source": [
         "print(X_Y[\"Y\"].value_counts())"
       ],
-      "execution_count": null,
+      "execution_count": 176,
       "outputs": [
         {
           "output_type": "stream",
@@ -1327,12 +1329,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xjKmBVEcVZw5",
-        "outputId": "7835b7cb-0649-4c2a-f05f-b8acaaac92cb"
+        "outputId": "d86ee6f0-ea15-4aa0-8580-eda57cda6ef9"
       },
       "source": [
         "print(sklearn.datasets.load_breast_cancer().target_names)"
       ],
-      "execution_count": null,
+      "execution_count": 177,
       "outputs": [
         {
           "output_type": "stream",
@@ -1348,15 +1350,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 190
+          "height": 0
         },
         "id": "8rGqNlJhV4be",
-        "outputId": "63000f98-f903-4add-e967-f953b08a37c4"
+        "outputId": "3c5ef24c-7f65-4e5b-9a85-f9f81a4293a4"
       },
       "source": [
         "X_Y.groupby(\"Y\").mean() # shows the values of the features less for 1 than for 0 on average. "
       ],
-      "execution_count": null,
+      "execution_count": 178,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1528,7 +1530,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 178
         }
       ]
     },
@@ -1549,7 +1551,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split "
       ],
-      "execution_count": null,
+      "execution_count": 179,
       "outputs": []
     },
     {
@@ -1560,7 +1562,7 @@
       "source": [
         "X_train,X_test,Y_train,Y_test = train_test_split(X,Y,test_size=0.1,stratify=Y,random_state=1) # random state is very important for ML problem. "
       ],
-      "execution_count": null,
+      "execution_count": 180,
       "outputs": []
     },
     {
@@ -1570,12 +1572,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u7GL1VlIYMAe",
-        "outputId": "300ffb75-de8b-4686-9271-f2882c1ba8cb"
+        "outputId": "1489e7b6-48aa-4ffe-fc6a-7868b9fc50c2"
       },
       "source": [
         "print(X.shape,X_train.shape,X_test.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "stream",
@@ -1593,12 +1595,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gPo2rv_cYbx4",
-        "outputId": "4a68a33f-bb73-4d75-ef59-70cb4c7377fb"
+        "outputId": "1bf0b0fa-8a77-4c58-c9ad-e6d607c01144"
       },
       "source": [
         "print(Y.mean(),Y_train.mean(),Y_test.mean()) # stratify ensures that the means are near about equal"
       ],
-      "execution_count": null,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "stream",
@@ -1626,12 +1628,12 @@
           "height": 455
         },
         "id": "ZfPw7qnnZYrQ",
-        "outputId": "6fffb28d-c737-4543-8fa6-54ad258380a8"
+        "outputId": "2a38dbfe-2225-443e-e22d-df7fbb331bea"
       },
       "source": [
         "X_Y"
       ],
-      "execution_count": null,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2088,7 +2090,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 59
+          "execution_count": 183
         }
       ]
     },
@@ -2099,14 +2101,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iTV3x1jmZl6R",
-        "outputId": "5de94764-36d5-469c-d6ad-3589f5574e14"
+        "outputId": "b9fa487f-b8b8-460a-814f-658f6b8f34c3"
       },
       "source": [
         "# manual binarisation \r\n",
         "X_binarised_3_train = X_train[\"mean area\"].map(lambda x : 1 if x<1000 else 0) \r\n",
         "X_binarised_3_train.head()"
       ],
-      "execution_count": null,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2123,7 +2125,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 184
         }
       ]
     },
@@ -2137,7 +2139,7 @@
         "X_binarised_train = X_train.apply(pd.cut,bins=2,labels=[1,0])\r\n",
         "X_binarised_test = X_test.apply(pd.cut,bins=2,labels=[1,0]) "
       ],
-      "execution_count": null,
+      "execution_count": 185,
       "outputs": []
     },
     {
@@ -2149,7 +2151,7 @@
         "X_binarised_train = X_binarised_train.values\r\n",
         "X_binarised_test = X_binarised_test.values"
       ],
-      "execution_count": null,
+      "execution_count": 186,
       "outputs": []
     },
     {
@@ -2159,12 +2161,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UxQkNaiXbIh_",
-        "outputId": "417177be-d5b7-4d8b-cd81-fadaec9fcf36"
+        "outputId": "32372bd4-2fad-496d-cea5-067b871cf084"
       },
       "source": [
         "print(type(X_binarised_train),type(Y_train))"
       ],
-      "execution_count": null,
+      "execution_count": 187,
       "outputs": [
         {
           "output_type": "stream",
@@ -2176,6 +2178,52 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "egscZdGd-1Pf",
+        "outputId": "adddcfc0-962b-4c63-a492-60118e3e1361"
+      },
+      "source": [
+        "# manual binarisation using just the mean of all the values \r\n",
+        "quantile_hyperparameter = 0.53\r\n",
+        "X_binarised_train_new = X_train\r\n",
+        "for i in range(X_binarised_train_new.shape[1]) : \r\n",
+        "  quantile = X_train[X_train.columns[i]].quantile(q=quantile_hyperparameter)\r\n",
+        "  X_binarised_train_new[X_binarised_train_new.columns[i]] = X_train[X_train.columns[i]].map(lambda x : 1 if x<quantile else 0)\r\n",
+        "X_binarised_train_new = X_binarised_train_new.values\r\n",
+        "\r\n",
+        "X_binarised_test_new = X_test\r\n",
+        "for i in range(X_binarised_test_new.shape[1]) : \r\n",
+        "  quantile = X_test[X_test.columns[i]].quantile(q=quantile_hyperparameter)\r\n",
+        "  X_binarised_test_new[X_binarised_test_new.columns[i]] = X_test[X_train.columns[i]].map(lambda x : 1 if x<quantile else 0)\r\n",
+        "X_binarised_test_new = X_binarised_test_new.values"
+      ],
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  if sys.path[0] == '':\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "mb-GolzLKIqB"
@@ -2183,6 +2231,17 @@
       "source": [
         "# MP Neuron Class"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pmidgEi4N-_5"
+      },
+      "source": [
+        "from sklearn.metrics import accuracy_score "
+      ],
+      "execution_count": 189,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2199,10 +2258,146 @@
         "    return 1 if np.sum(x) >= self.b else 0 \r\n",
         "  \r\n",
         "  def predict(self,X):\r\n",
-        "    "
+        "    Y = [] \r\n",
+        "    for x in X : \r\n",
+        "      result = self.model(x) \r\n",
+        "      Y.append(result) \r\n",
+        "    return np.array(Y) \r\n",
+        "\r\n",
+        "  def fit(self,X,Y) : \r\n",
+        "    accuracies = {} \r\n",
+        "    for i in range(X.shape[1] + 1) : \r\n",
+        "      self.b = i \r\n",
+        "      Y_pred = self.predict(X) \r\n",
+        "      accuracies[i] = accuracy_score(Y_pred,Y) \r\n",
+        "\r\n",
+        "    best_b = max(accuracies,key = accuracies.get) \r\n",
+        "    self.b = best_b \r\n",
+        "\r\n",
+        "    print(\"The optimal value of b is : \",self.b) \r\n",
+        "    print(\"The highest accuracy is : \",accuracies[self.b]) "
       ],
-      "execution_count": null,
+      "execution_count": 190,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5ACLZNCw8Qjj"
+      },
+      "source": [
+        "mp_neuron = MPNeuron() # creating an instance of the MP Neuron Class"
+      ],
+      "execution_count": 191,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "POy-YRvl8XeF",
+        "outputId": "b39a0f76-687c-425f-8dea-81701e908ebd"
+      },
+      "source": [
+        "mp_neuron.fit(X_binarised_train,Y_train) "
+      ],
+      "execution_count": 192,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The optimal value of b is :  28\n",
+            "The highest accuracy is :  0.849609375\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pYkcum7w8tAO"
+      },
+      "source": [
+        "Y_test_pred = mp_neuron.predict(X_binarised_test)"
+      ],
+      "execution_count": 193,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EwnWh6Vr9Zq5",
+        "outputId": "f9fac7cc-4003-42d2-8e2e-9c582ceb75e4"
+      },
+      "source": [
+        "accuracy_test = accuracy_score(Y_test_pred,Y_test)\r\n",
+        "print(accuracy_test)"
+      ],
+      "execution_count": 194,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.7894736842105263\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xp-rWxPiO_Kt",
+        "outputId": "cfdd0cf1-3bf6-4485-f600-0ed1dc8f8e5b"
+      },
+      "source": [
+        "mp_neuron.fit(X_binarised_train_new,Y_train) "
+      ],
+      "execution_count": 195,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The optimal value of b is :  12\n",
+            "The highest accuracy is :  0.908203125\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zIoCODY_TCI-",
+        "outputId": "72e6022b-a63f-4cd7-c804-5360b5b283a6"
+      },
+      "source": [
+        "Y_test_pred_manual = mp_neuron.predict(X_binarised_test_new)\r\n",
+        "accuracy_test_manual = accuracy_score(Y_test_pred_manual,Y_test)\r\n",
+        "print(accuracy_test_manual)"
+      ],
+      "execution_count": 196,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.8771929824561403\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
