--- a/FeedForwardNNWithPyTorch.ipynb
+++ b/FeedForwardNNWithPyTorch.ipynb
@@ -6,14 +6,13 @@
       "name": "FeedForwardNNWithPyTorch.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM7Y4eLBaTHpLARDy7xyNTr",
+      "authorship_tag": "ABX9TyPV2WjdnngMnelIco8vFtjU",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -970,6 +969,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DJp_alNayKxt"
+      },
+      "source": [
+        "Try to understand nn.init"
       ]
     }
   ]
